2019-04-25  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not show guesstimate for future security values in accounts view
	  (but use estimate for values between quotes)
	* Fix calculation of quote between recorded security quotes
	* Button for clearing values in new/edit transaction

2019-04-23  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix updating of account values when a transaction has been edited
	  in dialog and posponed to future date
	* Fix segfault when transaction is split up

2019-04-21  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Group assets and liabilities with the same type in accounts view

2019-04-06  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use localeconv() for number format
	  (improves sign and currency symbol placement, and fixes locales
	  where number format differs between general and monetary numbers)

2019-04-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use dot as alternative decimal separator for locales
	  with decimal comma and without dot as group separator

2019-03-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Language selection from within the application

2019-02-18  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not use deprecated QtCharts axis functions

2019-02-02  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Schedule confirmation time setting

2019-01-30  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix filter min and max currency
	* Fix crash on CSV import of quoted value containing delimiter

2019-01-15  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Update revision of schedule on confirmed occurrence

2019-01-14  svedie <svedie@gmail.com>

	* Improved German translation

2019-01-05  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Description of eqz file format

2019-01-16  Michael F. Schönitzer <michael@schoenitzer.de>

	* Some German translation improvements

2018-11-14  Hanna Knutsson <hanna.knutsson@protonmail.com>
